--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -30,6 +30,18 @@
                         </i> Manage Users </a>
                 </button>
             </div>
+            <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#cand"
+                (click)="candcollapse()">
+                <i class="fas fa-users" style="margin-right: 15px"></i>Candidati
+            </button>
+            <div class="collapsebtn" id="cand" *ngIf="isCandCollapsed">
+                <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
+                    <a [routerLink]="['/admin-dashboard/cand']"> <i class="fas fa-edit" style="margin-right: 10px">
+                        </i> Manage Cand </a>
+                </button>
+            </div>
+         
+        
             <button class="menubtn" (click)="logout()">
                 <i class="fas fa-sign-out-alt" style="margin-right: 15px"></i>Logout
             </button>
