--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<router-outlet></router-outlet>
+<router-outlet>Benvenuto nella parte Angular di questo progetto =) </router-outlet>
 <!--Qui viene mostrato il contenuto del routing del primo livello (parent). NON aggiungere template qui!-->
