--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -40,6 +40,16 @@
                         </i> Manage Cand </a>
                 </button>
             </div>
+            <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#job"
+                (click)="jobcollapse()">
+                <i class="fas fa-users" style="margin-right: 15px"></i>Lavoro
+            </button>
+            <div class="collapsebtn" id="cand" *ngIf="isJobCollapsed">
+                <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
+                    <a [routerLink]="['/admin-dashboard/job']"> <i class="fas fa-edit" style="margin-right: 10px">
+                        </i> Manage job </a>
+                </button>
+            </div>
          
         
             <button class="menubtn" (click)="logout()">
