--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,3 @@
 button{
-    background-color: darkorange;
+    background-color: rgb(0, 255, 191);
 }/* You can add global styles to this file, and also import other style files */
