--- a/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
+++ b/src/app/layout/admin-layout/admin-menu/admin-menu.component.html
@@ -71,6 +71,16 @@
             <a [routerLink]="['/admin-dashboard/answer']"> <i class="fas fa-edit" style="margin-right: 10px">
                 </i> Manage Risposte </a>
         </button>
+        </div>
+        <button type="button" class="menubtn" data-toggle="collapsebtn" data-target="#createst"
+        (click)="createstcollapse()">
+        <i class="fas fa-users" style="margin-right: 15px"></i>Test
+    </button>
+    <div class="collapsebtn" id="cand" *ngIf="isCreatestCollapsed">
+        <button class="menubtn" style="padding-left: 40px; background-color: #334247;">
+            <a [routerLink]="['/admin-dashboard/createst']"> <i class="fas fa-edit" style="margin-right: 10px">
+                </i> Manage Crea Test </a>
+        </button>
         
     </div>
       
