--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -44,15 +44,15 @@
         </tr>
         <tr *ngFor="let user of users">
           <td>
-            <input [(ngModel)]="user.username">
+            <input [(ngModel)]="user.login">
           </td>
           <td>
             <input [(ngModel)]="user.password">
           </td>
           <td>
-            <select [(ngModel)]="user.usertype">
-              <option [selected]="user.usertype===ADMIN" value="ADMIN">ADMIN</option>
-              <option [selected]="user.usertype===USER" value="USER">USER</option>
+            <select [(ngModel)]="user.authorities">
+              <option [selected]="user.authorities===ROLE_ADMIN" value="ROLE_ADMIN">ADMIN</option>
+              <option [selected]="user.authorities===ROLE_USER " value="ROLE_USER">USER</option>
             </select>
           </td>
           <td>
