--- a/src/app/user/account/account.component.html
+++ b/src/app/user/account/account.component.html
@@ -15,10 +15,10 @@
               </tr>
               <tr>
                 <td>
-                  <input [(ngModel)]="user.username">
+                  <input [(ngModel)]="user.login">
                 </td>
                 <td>
-                  <input [(ngModel)]="user.password">
+                  <input [(ngModel)]="user.email">
                 </td>
                 <td>
                   <button (click)=update(user)>Save</button>
