--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,3 +18,26 @@
     </div>
   </div>
 </div>
+<div class="container-fluid">
+<div>
+<div>
+<div>
+    <div class="col-md-5">
+      <form #r="ngForm">
+        <p>Please insert username and password to Login or Sign Up</p>
+        <div class="form-group">
+          <input class="form-control" type="text" id="email" name="email" placeholder="email" ngModel>
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="text" id="login" name="login" placeholder="username" ngModel>
+        </div>
+        <div class="form-group">
+          <input class="form-control" type="password" id="pass" name="password" placeholder="Password" ngModel>
+        </div>
+  
+        <button type="submit" (click)="register(r)">registrati</button>
+
+      </form>
+    </div>
+  </div>
+</div>
